Fix fug overflow

--- a/src/app/home-page/index/index.component.scss
+++ b/src/app/home-page/index/index.component.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: stretch;
   width: 100%;
-  height: calc(200% - 60px);
+  height: calc(200% - 30px);
   background-color: $CONTENT_BACKGROUND_COLOR;
 
   .index-part {
